2008-04-01  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/update-notifier.c (str_substitute): Handle NULL strings
	without a critical warning.

2008-04-01  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/util.h, src/util.cc (entertainment_update_title): Moved code
	for ellipsizing the main title text, and better setting the size
	of dialog to its right place (N83057).
	(show_file_chooser_for_save): Added a new parameter to allow
	setting the default folder from the calling fuction (N80933).

	* src/log.cc (gchar *last_save_log_dir): New global variable to
	store the last accesed path for saving the log (N80933).
	(save_log): Store the last path used for saving the log (N80933).
	(log_response): If there's a path available to use as the last
	path used, use it, otherwise use $HOME/Mydocs/.documents (N80933).

2008-03-27  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* main.h (struct package_info) : make installed_size field of type
	int64_t instead of int (N82350).

2008-03-27  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/settings.cc (show_settings_dialog_flow): Do not pass button
	labels through gettext.  They are not translated and just confuse
	the l10n checker.

2008-03-27  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/main.cc (compare_package_installed_names): Don't call to
	compare_system_updates in order not to make the OS package to be
	always on top of a packages list under a view different than
	"Check for updates" view (83096).
	(compare_package_installed_versions): Likewise (83096).
	(compare_package_installed_sizes): Likewise (83096).

2008-03-26  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/util.cc (global_package_list_key_pressed): Avoid jumping to
	the breadcrumb trail when pressing the down hardkey while in the last
	item of the packages list (N80270).

2008-03-25  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.7

	Added the apt-worker "rescue" command.

	* src/apt-worker-bin.cc (save_operation_record)